# market_metrics

./: README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
src/marketmetrics/: __init__.py  __main__.py  calculator.py  config.py  test_calculator.py  test_config.py
